wip: selecting regions and maps, still working to display the tile layer

--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -86,6 +86,8 @@
     <Content Include="App\views\transforMap\home.html" />
     <Content Include="App\views\transforMap\home.js" />
     <Content Include="App\themes\transforMap\images\favicon.ico" />
+    <Content Include="App\views\transforMap\impress.html" />
+    <Content Include="App\views\transforMap\impress.js" />
     <Content Include="App\views\transforMap\_nav.html" />
     <Content Include="App\views\transforMap\_nav.js" />
     <Content Include="App\_libraries\jslinq.js" />
