--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -49,7 +49,7 @@
     <Content Include="App\services\api\places.js" />
     <Content Include="App\services\api\placeSearch.js" />
     <Content Include="App\services\api\searchSuggestions.js" />
-    <Content Include="App\services\api\taxonomy.js" />
+    <Content Include="App\services\taxonomy.js" />
     <Content Include="App\services\map\mapAdapter.js" />
     <Content Include="App\services\map\placesLayer.js" />
     <Content Include="App\services\map\pointerLayer.js" />
