--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -44,6 +44,7 @@
     <Content Include="App\components\tagSelection-component.html" />
     <Content Include="App\components\tagSelection-component.js" />
     <Content Include="App\mainMin.js" />
+    <Content Include="App\models\EntryCategories.js" />
     <Content Include="App\services\api\apiClient.js" />
     <Content Include="App\services\api\placeComparators.js" />
     <Content Include="App\services\api\places.js" />
@@ -630,7 +631,6 @@
     <Content Include="App\_libraries\typings\toastr\toastr.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App\models\" />
     <Folder Include="Content\onYOURway\images\about\project\" />
     <Folder Include="Content\TransforMap\" />
   </ItemGroup>
