--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Controllers\AccountControllerModels.cs" />
     <Compile Include="App_Start\BreezeDynamicTypeRenamingSerializationBinder.cs" />
     <Compile Include="Controllers\onYOURwayContextProvider.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Entries\Media.cs" />
     <Compile Include="Models\Identity\IdentityManagers.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
