--- a/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
+++ b/onYOURway.Client.WebApp/onYOURway.Client.WebApp.csproj
@@ -59,6 +59,7 @@
     <Content Include="App\services\map\siteCollectorLayer.js" />
     <Content Include="App\services\map\tileLayer.js" />
     <Content Include="App\services\providers\routing-bing.js" />
+    <Content Include="App\services\translation.js" />
     <Content Include="App\themes\onYOURway\images\favicon.ico" />
     <Content Include="App\themes\transforMap\css\bootstrap.css" />
     <Content Include="App\themes\transforMap\css\searchBox.css">
